styles.css
html {
    overflow: auto;
}

* {
    border: 1px solid red;
}

html,
body {
    min-height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

body {
    font-family: "Roboto", sans-serif;
    padding: 0;
    margin: 0;
}

.header {
    display:flex;
    background-color: #1f2937;
    align-items: center;
    justify-content: space-between;
    padding: 0;
}

.header-logo {
    color: #F9FAF8;
    font-size: 24px;
}

.header ul {
    list-style: none;
    display: flex;
    gap: 16px;
}

.nav {
    color: #e5e7ee;
    font-size: 18px;
}

.hero-banner {
    display: flex;
    justify-content: center;
    background-color: #1f2937;
    padding: 0 10%;
}

.banner-content {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 32px 0;
    gap: 16px;
}

.banner-text {
    display: flex;
    flex-direction: column;
    width: 500px;
    gap: 16px;
    height: 100%;
}

.hero-text {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 900;
    margin: 0;
}

.hero-subtext {
    color: #e5e7eb;
    font-size: 18px;
    margin: 0;
    font-weight: 300;
}

.sign-up {
    background-color: #3882f6;
    color: #e5e5e5;
    margin: 0;
    width: 25%;
    padding: 10px;
    border-radius: 5px;
}

.hero-image {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #5e6165;
    width: 500px;
    height: 100%;
    margin: 0;
}

.hero-image div {
    color:#F9FAF8;
}

.random-info {
    text-align: center;
    flex: auto;
}

.random-info .section-title {
    font-size: 36px;
    color: #1f2937;
    font-weight: 900;
}

.container {
    display: flex;
    justify-content: center;
    gap: 32px;
}

.child {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 150px;
}

.image-box {
    width: 150px;
    height: 150px;
    border: 3px solid #3882f6;
    border-radius: 10px;
}

.child p {
    font-size: 16px;
    color: #1f2937;
}

.quote-banner {
    background-color: #e5e7eb;
    display: flex;
    justify-content: center;
    padding: 36px;
}

.quote {
    max-width: 650px;
    display: flex;
    flex-direction: column;
    gap: 16px;
    align-items: flex-end;
}

.quote-text {
    font-size: 36px;
    font-style: italic;
    font-weight: 200;
    color: #1f2937;
}

.quote-author {
    display: flex;
    font-weight: 500;
    padding-right: 48px;
}

.sign-up-banner {
    display: flex;
    gap: 16px;
    background-color: #3882f6;
    color: #e5e7eb;
    margin: 16px 32px;
    width: 800px;
    padding: 0;
    justify-content: space-between;
    align-items: center;
    border-radius: 10px;
}

.sign-up-banner-text {
    display: flex;
    flex-direction: column;
}

.footer {
    display: flex;
    justify-content: center;    
    background-color: #1f2937;
    color: #e5e7eb;
    font-size: small;
}

